2008-09-02  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* reporting/fgraph.php: SQL passed wasn't being processed, so the graph
	was off for grafico_eventos_group. Updated that and the whole
	function. Simplified, it runs very fast now (practically no delay).

	* operation/events/events.php: Description wasn't being added to the
	audit log when deleting multiple items. Fixed

2008-09-02  Esteban Sanchez  <estebans@artica.es>

	* include/functions.php: Style correction.

	* general/footer.php: Fixed link to Firefox and make it
	translatable.

2008-09-02  Sancho Lerena <slerena@gmail.com>

	* functions.php: Added function to clean SQL string.

	* setup/news.php: Fixed problem adding new news.

	* setup/link.php: Added mysql recheck to input var.

	* login_page.php: Removed "Welcome", added a blank line before title.

	* logon_failed.php: Was rending bad in IE.

	* footer.php: Added Firefox button and tooltip about best view in Firefox.

	* header.php: Old rendering was crazy in IE. New code to set render exactly
	equal on IE and Firefox. PLEASE DO NOT USE TABULAR phpp functions here, this is 
	pure HTML formatting.

2008-09-02  Esteban Sanchez  <estebans@artica.es>

	* extensions/update_manager/lib/*: Update Manager has its own license
	header which must be respected.

2008-09-02  Sancho Lerena <slerena@gmail.com>

	*  extensions/update_manager*: Updated GPL header. Added 
	more text about Update Manager anonymous information gathering.

2008-09-02  Esteban Sanchez  <estebans@artica.es>

	* extensions/update_manager.php: Style correction. Removed force
	updating of the settings.

	* extensions/update_manager/load_updatemanager.php: Run the keygen if
	the user is not the free one.

	* extensions/update_manager/main.php: Show information message to free
	users.

	* extensions/update_manager/settings.php: Allow updating keygen and
	binary path settings.

	* extensions/update_manager/lib/*: Updated to latest version of Open
	Update Manager.
